A whole lot of UI changes: * Space between news source and bias rating on article card * Fixed some weird issue with article cards not showing up on '/' route * Showed most recent articles in most recent first order * Space after manually add article button * Make cards same size (Article titles cut off after 3 lines) * Have the cards scroll horizontally * Article cards colors all take the style of most recent color

--- a/AppleJuice/src/main/resources/public/css/Styling.css
+++ b/AppleJuice/src/main/resources/public/css/Styling.css
@@ -27,6 +27,32 @@ h4 {
     margin: 8px;
     text-align: left;
     align-self: stretch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+/* Scrollbar styling */
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    border-radius: 8px;
+    background: rgba(210,227,255,0.5);
+}
+::-webkit-scrollbar-track:hover {
+    background: rgba(210,227,255,1);
+    visibility: visible;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background: rgba(0,94,255,0.2);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0,94,255,1);
+    visibility: visible;
 }
 
 .linkIntro {
@@ -46,29 +72,6 @@ a:link {
     display: inline-block;
 }
 
-.buttonBiasRating {
-     background-color: var(--color2);
-     border: 2px solid var(--color1);
-     border-radius: 8px;
-     color: var(--color1);
-     padding: 2px 12px 8px 12px;
-     text-align: center;
-     font-family: "Segoe UI", sans-serif;
-     font-size: 18pt;
-     display: inline-block;
- }
-.buttonBiasRating:hover {
-    background-color:  var(--color1);
-    border: 2px solid  var(--color1);
-    border-radius: 8px;
-    color:  var(--color2);
-    padding: 2px 12px 8px 12px;
-    text-align: center;
-    font-family: "Segoe UI", sans-serif;
-    font-size: 18pt;
-    display: inline-block;
-}
-
 .buttonBigNews {
     background-color:  var(--color2);
     border: 2px solid  var(--color1);
@@ -79,19 +82,13 @@ a:link {
     font-family: "Segoe UI", sans-serif;
     font-size: 18pt;
     display: inline-block;
+    margin-left: 8px;
 }
 .buttonBigNews:hover {
     background-color:  var(--color1);
-    border: 2px solid  var(--color1);
-    border-radius: 8px;
+    border: 2px solid  var(--color2);
     color:  var(--color2);
-    padding: 2px 12px 8px 12px;
-    text-align: center;
-    font-family: "Segoe UI", sans-serif;
-    font-size: 18pt;
-    display: inline-block;
 }
-
 
 p {
     margin: 8px;
@@ -102,28 +99,33 @@ p {
     text-align: left;
 }
 
+.quickArticlesWrap {
+    overflow-x: auto;
+    margin: 16px 32px;
+}
+
 .quickArticles {
     align-items: flex-start;
     height: fit-content;
-    margin: 32px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(420px, 2fr));
-}
-
-.container:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    border-color: #707070;
+    margin-bottom: 32px;
+    display: table;
+    border-spacing: 16px;
 }
 
 .container {
-    width: 420px;
-    margin: 8px;
-    padding: 16px;
+    padding: 16px 16px 80px 16px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
     border-color: #707070;
-    display: flex;
+    display: table-cell;
     flex-flow: wrap;
+    max-width: 420px;
+    min-width: 420px;
+    position: relative;
+}
+.container:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border-color: #707070;
 }
 
 .newsSourceSm {
@@ -136,6 +138,9 @@ p {
     font-family: "Segoe UI", sans-serif;
     font-size: 16pt;
     align-self: flex-start;
+    margin: 8px;
+    display: inline-block;
+    word-wrap: break-word;
 }
 
 .artScore {
@@ -148,6 +153,9 @@ p {
     font-family: "Segoe UI", sans-serif;
     font-size: 16pt;
     align-self: baseline;
+    margin: 8px;
+    display: inline-block;
+    word-wrap: break-word;
 }
 
 .buttonDev {
@@ -159,7 +167,7 @@ p {
     text-align: center;
     font-family: "consolas", monospace;
     font-size: 12pt;
-    margin-left: 24px;
+    margin: 16px 24px;
     display: inline-block;
 }
 
@@ -180,17 +188,22 @@ p {
     font-family: "Segoe UI", sans-serif;
     font-size: 16pt;
     color: #aaaab1;
-    align-self: flex-end;
+    align-self: center;
     margin-left: auto;
 }
 
 .articleLink:hover {
-    font-family: "Segoe UI", sans-serif;
-    font-size: 16pt;
     color: #005EFF;
-    align-self: flex-end;
     text-decoration: underline;
-    margin-left: auto;
+}
+
+.bottom-wrap {
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
+    display: flex;
+    flex-direction: row;
+    width: 90%;
 }
 
 .ArticleDel {
